Prepare for adding full detr code

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,24 @@ code/image_gen/samples
 code/image_gen/backgrounds
 google-research/
 code/detr/test_tensors
+
+.nfs*
+*.ipynb
+*.pyc
+.dumbo.json
+.DS_Store
+.*.swp
+*.pth
+**/__pycache__/**
+.ipynb_checkpoints/
+detr/datasets/data/
+experiment-*
+*.tmp
+*.pkl
+**/.mypy_cache/*
+.mypy_cache/*
+not_tracked_dir/
+.vscode
+detr/coco_dataset/
+.idea/
+detr/tmp/
