--- a/detr/detr_environment.yml
+++ b/detr/detr_environment.yml
@@ -54,7 +54,10 @@ dependencies:
     - kiwisolver==1.3.1
     - matplotlib==3.3.3
     - opencv-python==4.5.1.48
+    - pandas==1.2.1
     - pycocotools==2.0
     - pyparsing==2.4.7
     - python-dateutil==2.8.1
+    - pytz==2021.1
+    - shapely==1.7.1
 prefix: /home/andreaalf/anaconda3/envs/detr
